--- a/index.html
+++ b/index.html
@@ -5,26 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="Hero">
-        <div class="Header">
-<!--           <img src="imgs/logo.png" alt="logo" height="auto" width="70"> -->
+    <div class="hero">
+        <div class="header">
+            <div class="text">LOGO</div>
             <div class="Bars">
- <!--               <ul>
-                    <li><a href="#">Network</li></a> 
-                    <li><a href="#">Testimony</li></li>
-                    <li><a href="#">Register</li></li>
+               <ul>
+                    <li><a class="text" href="#">Network</a> </li>
+                    <li><a class="text" href="#">Testimony</a></li>
+                    <li><a class="text" href="#">Register</a></li>
                 </ul>
-            -->
+
             </div>
         </div>
-        <div class="Content">
-            <div class="left-col"></div>
-            <div class="right-col"></div>
+        <div class="content">
+            <div class="left-col">
+                <div class="heading text">This website is awsome</div>
+                <div class="subheading text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc a consectetur enim. Curabitur purus lorem, blandit non diam ut, tincidunt interdum nisl. Cras volutpat, mi vel volutpat laoreet, lectus felis.</div>
+                <div class="button"><button class="text">Sign up</button></div>
+            </div>
+            <div class="right-col">
+                <img src="imgs/hero-img.jpg" alt="image" height="auto" width="500">
+            </div>
         </div>
     </div>
-    <div class="Network">
+    <div class="network">
         <div class="heading"></div>
         <div class="cards">
             <div class="card">
@@ -33,14 +41,14 @@
             </div>
         </div>
     </div>
-    <div class="Testimony"></div>
-    <div class="Register">
-        <div class="Container">
+    <div class="testimony"></div>
+    <div class="register">
+        <div class="container">
             <div class="text"></div>
             <div class="button">
             </div>
         </div>
     </div>
-    <div class="Footer"></div>
+    <div class="footer"></div>
 </body>
 </html>
